[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = [ "full" ] }
futures = "0.3"
async-lock = "2.5"
lazy_static = "1.4"

clap = { version = "3.1", features = [ "derive" ] }

anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3"

base64 = "0.13"
rand = "0.8"
bytes = "1.1"
